Added ImGui and settings for simulation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,11 @@ set(CMAKE_CXX_STANDARD 17)
 set(linkers -lglfw -lGL -lX11 -lpthread -lXrandr -ldl)
 include_directories(include)
 
-add_executable(SlimeMoldSimulation main.cpp glad.c Simulation.cpp Simulation.h Window.cpp Window.h Shader.h ComputeShader.h Texture.cpp Texture.h Sprite.cpp Sprite.h Framebuffer.cpp Framebuffer.h)
+
+add_subdirectory(imgui)
+include_directories(${PROJECT_SOURCE_DIR})
+add_executable(SlimeMoldSimulation main.cpp glad.c Simulation.cpp Simulation.h Window.cpp Window.h Shader.h ComputeShader.h Texture.cpp Texture.h Sprite.cpp Sprite.h Framebuffer.cpp Framebuffer.h Settings.cpp Settings.h)
+#add_executable(${APP_TARGET} main.cpp)
 target_link_libraries(SlimeMoldSimulation ${linkers})
+target_link_libraries(SlimeMoldSimulation imgui)
+
