Added imagebuttons for play/pause and reset. reset is not implemented yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(include)
 
 add_subdirectory(imgui)
 include_directories(${PROJECT_SOURCE_DIR})
-add_executable(SlimeMoldSimulation main.cpp glad.c Simulation.cpp Simulation.h Window.cpp Window.h Shader.h ComputeShader.h Texture.cpp Texture.h Sprite.cpp Sprite.h Framebuffer.cpp Framebuffer.h Settings.cpp Settings.h)
+add_executable(SlimeMoldSimulation main.cpp glad.c Simulation.cpp Simulation.h Window.cpp Window.h Shader.h ComputeShader.h Texture.cpp Texture.h Sprite.cpp Sprite.h Framebuffer.cpp Framebuffer.h Settings.cpp Settings.h include/stb_image.cpp)
 #add_executable(${APP_TARGET} main.cpp)
 target_link_libraries(SlimeMoldSimulation ${linkers})
 target_link_libraries(SlimeMoldSimulation imgui)
