Added yaml-cpp to save agent settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,11 @@ include_directories(include)
 
 
 add_subdirectory(imgui)
+add_subdirectory(yaml-cpp)
 include_directories(${PROJECT_SOURCE_DIR})
 add_executable(SlimeMoldSimulation main.cpp glad.c Simulation.cpp Simulation.h Window.cpp Window.h Shader.h ComputeShader.h Texture.cpp Texture.h Sprite.cpp Sprite.h Framebuffer.cpp Framebuffer.h Settings.cpp Settings.h include/stb_image.cpp AgentSystem.cpp AgentSystem.h)
 #add_executable(${APP_TARGET} main.cpp)
 target_link_libraries(SlimeMoldSimulation ${linkers})
 target_link_libraries(SlimeMoldSimulation imgui)
+target_link_libraries(SlimeMoldSimulation yaml-cpp)
 
