Cleaned up code, added delay to start of simulation. Added CMake targets to move shaders and images to correct location on build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,6 @@ project(SlimeMoldSimulation)
 
 find_package(OpenGL REQUIRED)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
 
 # Including GLFW
@@ -26,10 +25,20 @@ include_directories(yaml-cpp)
 
 include_directories(include)
 
-set(SOURCE_FILES main.cpp glad/src/glad.c Simulation.cpp Simulation.h Window.cpp Window.h Shader.h ComputeShader.h Texture.cpp Texture.h Sprite.cpp Sprite.h Framebuffer.cpp Framebuffer.h Settings.cpp Settings.h include/stb_image.cpp AgentSystem.cpp AgentSystem.h)
+
+set(SOURCE_FILES src/main.cpp glad/src/glad.c src/Simulation.cpp src/Simulation.h src/Window.cpp src/Window.h src/Shader.h src/ComputeShader.h src/Texture.cpp src/Texture.h src/Sprite.cpp src/Sprite.h src/Framebuffer.cpp src/Framebuffer.h src/Settings.cpp src/Settings.h include/stb_image.cpp src/AgentSystem.cpp src/AgentSystem.h)
 
 add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
 
 # Linking GLFW and OGL
 target_link_libraries(${CMAKE_PROJECT_NAME}  glfw glm imgui yaml-cpp ${GLFW_LIBRARIES} ${OPENGL_LIBRARY})
-
+add_custom_target(copy-shaders ALL
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_CURRENT_SOURCE_DIR}/shaders
+        ${CMAKE_CURRENT_BINARY_DIR}/shaders)
+add_custom_target(copy-assets ALL
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_CURRENT_SOURCE_DIR}/images
+        ${CMAKE_CURRENT_BINARY_DIR}/images)
+add_dependencies(${CMAKE_PROJECT_NAME} copy-shaders)
+add_dependencies(${CMAKE_PROJECT_NAME} copy-assets)
